<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="375">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"/>

        <com.playbench.winting.views.BoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="295"
            android:text="@string/Main_Second_Tab"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/colorTextColor"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:paddingRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <com.playbench.winting.views.BoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorTextColor"
            android:textSize="12dp"
            android:gravity="center"
            android:text="@string/My_List_Region"/>

        <com.playbench.winting.views.BoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorTextColor"
            android:textSize="12dp"
            android:gravity="center"
            android:text="@string/My_List_Progress"/>

        <com.playbench.winting.views.BoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorTextColor"
            android:textSize="12dp"
            android:gravity="center"
            android:text="@string/My_List_Start_Date"/>

        <com.playbench.winting.views.BoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorTextColor"
            android:textSize="12dp"
            android:gravity="center"
            android:text="@string/My_List_End_Date"/>

        <com.playbench.winting.views.BoldTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorTextColor"
            android:textSize="12dp"
            android:gravity="center"
            android:text="@string/My_List_Price"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/colorRGB250"/>

    <ListView
        android:id="@+id/list_view_my_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorRGB250"
        android:dividerHeight="8dp"/>
</LinearLayout>